[gd_scene load_steps=23 format=3 uid="uid://reqkcg8jyuxa"]

[ext_resource type="Texture2D" uid="uid://btkfov3ncpjpw" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Enemies and NPC/frog/Spritesheets/frog-idle.png" id="1_6ekd3"]
[ext_resource type="Script" uid="uid://clo58tyw8jcgt" path="res://frog.gd" id="1_byod8"]
[ext_resource type="Texture2D" uid="uid://dguhxxbrjk0vw" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Props Items and VFX/enemy-death/spritesheet.png" id="1_slgur"]
[ext_resource type="Texture2D" uid="uid://dwhqpsy2v2vmv" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Enemies and NPC/frog/Spritesheets/frog-jump.png" id="2_slgur"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_byod8"]
size = Vector2(36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_byod8"]
atlas = ExtResource("1_slgur")
region = Rect2(0, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_aumaf"]
atlas = ExtResource("1_slgur")
region = Rect2(64, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_o353j"]
atlas = ExtResource("1_slgur")
region = Rect2(128, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_yakrr"]
atlas = ExtResource("1_slgur")
region = Rect2(192, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_71pkg"]
atlas = ExtResource("1_slgur")
region = Rect2(256, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia14r"]
atlas = ExtResource("1_slgur")
region = Rect2(320, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j707"]
atlas = ExtResource("1_slgur")
region = Rect2(384, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_j38ec"]
atlas = ExtResource("1_6ekd3")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cyyp"]
atlas = ExtResource("1_6ekd3")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rd326"]
atlas = ExtResource("1_6ekd3")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvt0w"]
atlas = ExtResource("1_6ekd3")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_40hiu"]
atlas = ExtResource("2_slgur")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_omj1a"]
atlas = ExtResource("2_slgur")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kk5g"]
atlas = ExtResource("2_slgur")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_aumaf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_byod8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aumaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o353j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yakrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71pkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia14r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j707")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j38ec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cyyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rd326")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvt0w")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_40hiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omj1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kk5g")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_byod8"]
radius = 156.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j38ec"]
size = Vector2(36, 31.25)

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_byod8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, -16)
shape = SubResource("RectangleShape2D_byod8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3.10937, -19.7812)
scale = Vector2(1.72054, 1.70117)
sprite_frames = SubResource("SpriteFrames_aumaf")
animation = &"jump"
autoplay = "idle"
frame = 1
frame_progress = 0.0816673

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(-4, -18)
shape = SubResource("CircleShape2D_byod8")

[node name="PlayerDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(-5, -18.375)
shape = SubResource("RectangleShape2D_j38ec")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
[connection signal="body_exited" from="PlayerDeath" to="." method="_on_player_death_body_exited"]
